--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import "../../node_modules/vue-multiselect/dist/vue-multiselect.min.css";
